force-app/main/default/objects/Plan_Objective__c/Plan_Objective__c.object-meta.xml
<CustomObject>
    <label>Plan Objective</label>
    <nameField>
        <label>Plan Objective Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Plan Objectives</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>