force-app/main/default/objects/Plan_Objective__c/fields/Objective_Description__c.field-meta.xml
<CustomField>
    <fullName>Objective_Description__c</fullName>
    <label>Objective Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>