force-app/main/default/objects/Plan_Objective__c/fields/Outcome__c.field-meta.xml
<CustomField>
    <fullName>Outcome__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Outcome</label>
    <referenceTo>vlocity_ps__ServicePlanOutcome__c</referenceTo>
    <relationshipLabel>Plan Objectives</relationshipLabel>
    <relationshipName>Plan_Objectives</relationshipName>
    <type>Lookup</type>
</CustomField>