force-app/main/default/objects/Plan_Objective__c/fields/Progress__c.field-meta.xml
<CustomField>
    <fullName>Progress__c</fullName>
    <label>Progress</label>
    <length>200</length>
    <type>Text</type>
</CustomField>